add support for HDP 2.5.3, which fixes issue #20